--- a/src/app/notation-window/notation-window.component.html
+++ b/src/app/notation-window/notation-window.component.html
@@ -444,11 +444,11 @@
     sixth8a.value)" >Submit to Section</button>
   </div>
 
-  <div class="well">
-
-  </div>
     <!-- jumbotron -->
     <button (click)="startScrolling()">Start</button>
+    <div class="well">
+      Test display ...
+    </div>
     <div class="jumbotron" id="fretBoard">
       <table>
         <hr>
