--- a/src/app/scrolling-display/scrolling-display.component.html
+++ b/src/app/scrolling-display/scrolling-display.component.html
@@ -1,6 +1,9 @@
 <div class="container">
     <!-- jumbotron -->
   <button (click)="startScrolling()">Start Scrolling</button>
+  <ul>
+    <li *ngFor="let note of firstStringArr">{{note}}</li>
+  </ul>
   <div class="well">
     <h2>Display Window</h2>
   </div>
@@ -9,22 +12,22 @@
       <hr>
       <hr>
       <tr>
-        <td *ngFor="let note of _firstArr"><span>{{note}}</span></td>
+        <td *ngFor="let note of firstStringArr"><span>{{note}}</span></td>
       </tr>
       <tr>
-        <td *ngFor="let note of _secondArr"><span>{{note}}</span></td>
+        <td *ngFor="let note of secondStringArr"><span>{{note}}</span></td>
       </tr>
       <tr>
-        <td *ngFor="let note of _thirdArr"><span>{{note}}</span></td>
+        <td *ngFor="let note of thirdStringArr"><span>{{note}}</span></td>
       </tr>
       <tr>
-        <td *ngFor="let note of _fourthArr"><span>{{note}}</span></td>
+        <td *ngFor="let note of fourthStringArr"><span>{{note}}</span></td>
       </tr>
       <tr>
-        <td *ngFor="let note of _fifthArr"><span>{{note}}</span></td>
+        <td *ngFor="let note of fifthStringArr"><span>{{note}}</span></td>
       </tr>
       <tr>
-        <td *ngFor="let note of _sixthArr"><span>{{note}}</span></td>
+        <td *ngFor="let note of sixthStringArr"><span>{{note}}</span></td>
       </tr>
     </table>
   </div>
