--- a/src/app/scrolling-display/scrolling-display.component.html
+++ b/src/app/scrolling-display/scrolling-display.component.html
@@ -192,3 +192,6 @@
   <source src="../assets/GS3Clean.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
 </audio>
+<audio id="Beat80">
+  <source src="../assets/Beat80LessVolume3.mp3" type="audio/mpeg">
+</audio>
