add stop function.

--- a/src/app/scrolling-display/scrolling-display.component.html
+++ b/src/app/scrolling-display/scrolling-display.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <button (click)="playAudio()">playAudio</button>
   <button (click)="startScrolling()">Start Scrolling</button>
+  <button (click)="stopScrolling()">Make it Stop!!!</button>
   <!-- <ul>
     <li *ngFor="let note of firstStringArr">{{note}}</li>
   </ul> -->
